--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -17,19 +17,21 @@ html(lang="en" class="no-js")
 
     title
       = page.title
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-     
-
-    link href="/css/less/site.css" rel="stylesheet"
+    meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
+  
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/parallax-slider.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
     
-    /[if IE 8]
-      link rel="stylesheet" type="text/css" href="/css/ie8.css"
-    
-    
-    script src="/js/libs/modernizr-2.5.3.min.js"
-
     /[if lt IE 9]
-      script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"
+      script src="http://html5shim.googlecode.com/svn/trunk/html5.js"
+    /[if IE 9]
+      link href="css/styleie9.css" rel="stylesheet"
 
     - if page.lib? :pricer
       link rel="stylesheet" href="/css/pricer.css"
@@ -38,17 +40,34 @@ html(lang="en" class="no-js")
     == partial :analytics
   body
     == partial :header
-    == yield
+
+    == yield_content(:banner)
+
+    #page-title
+      #page-title-inner
+        .container
+          h2
+            i.ico-stats.icon-white
+            == page.heading
+
+    #wrapper
+      .container
+        == yield
     == partial :footer
 
     == partial :search
 
 
-    script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"
-    javascript:
-      !window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.9.0.min.js"%3E%3C/script%3E'))//'
-
-    script src="/js/bootstrap.min.js"
+    <script src="/js/jquery-1.8.2.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/isotope.js"></script>
+    <script src="/js/jquery.imagesloaded.js"></script>
+    <script src="/js/flexslider.js"></script>
+    <script src="/js/carousel.js"></script>
+    <script src="/js/jquery.cslider.js"></script>
+    <script src="/js/slider.js"></script>
+    <script src="/js/fancybox.js"></script>
+    <script defer="defer" src="/js/custom.js"></script>
 
     script src="/js/highlight/highlight.pack.js"
 
@@ -78,7 +97,5 @@ html(lang="en" class="no-js")
     - if page.lib?("plusone")
       / Place this tag in your head or just before your close body tag 
       script src="https://apis.google.com/js/plusone.js"
-
-    script src="/js/script.js"
 
 
