--- a/content/_layout/plugin_page.slim
+++ b/content/_layout/plugin_page.slim
@@ -1,49 +1,48 @@
 Layout: headless_page
 
-== partial :heading_banner
+.row
+  article.span9
+    
+    - if page.lib?('plusone')
+      div style="width:70px;padding-top:25px;float:right"
+        .g-plusone
+    - if page.meta.warning
+      .warning-message = page.meta.warning
+    - if page.heading
+      h1.page-header
+        == page.heading
 
-article.span9
-  
-  - if page.lib?('plusone')
-    div style="width:70px;padding-top:25px;float:right"
-      .g-plusone
-  - if page.meta.warning
-    .warning-message = page.meta.warning
-  - if page.heading
-    h1.page-header
-      == page.heading
-
-  == yield
+    == yield
 
 
-aside.span3.sidebar.plugins_sidebar
-  -if page.meta.edition and not page.flag?('edition')
+  aside.span3.sidebar.plugins_sidebar
+    -if page.meta.edition and not page.flag?('edition')
+      p 
+        | This plugin (#{page.heading}) is part of the 
+        a href=page.edition.path =page.edition.heading
+      p =page.edition.meta.cost
+
+    -if page.meta.bundle and not page.flag?('bundle')
+      p 
+        | This plugin (#{page.heading}) was originally part of the 
+        a href=page.bundle.path =page.bundle.heading
+      p =page.bundle.meta.cost
+
+
+
+    markdown:
+      ### Where is the plugins section?
+      The `<plugins>` section is located in Web.config, and is nested inside the `<resizer>` element, which is nested inside `<configuration>`. For examples, see [this sample Web.config file](/docs/configuration).
+      ### What is NuGet? 
+      NuGet is a better way to manage your project's libraries, and is [fully supported by the ImageResizer](/docs/nuget).  
+    - editions.each do |e|
+      h3
+        a(href="#{e.path}") =e.heading
+      ul
+        -e.edition_plugins.each do |plugin|
+          li
+            a(href="#{plugin.path}")= plugin.heading
     p 
-      | This plugin (#{page.heading}) is part of the 
-      a href=page.edition.path =page.edition.heading
-    p =page.edition.meta.cost
-
-  -if page.meta.bundle and not page.flag?('bundle')
-    p 
-      | This plugin (#{page.heading}) was originally part of the 
-      a href=page.bundle.path =page.bundle.heading
-    p =page.bundle.meta.cost
-
-
-
-  markdown:
-    ### Where is the plugins section?
-    The `<plugins>` section is located in Web.config, and is nested inside the `<resizer>` element, which is nested inside `<configuration>`. For examples, see [this sample Web.config file](/docs/configuration).
-    ### What is NuGet? 
-    NuGet is a better way to manage your project's libraries, and is [fully supported by the ImageResizer](/docs/nuget).  
-  - editions.each do |e|
-    h3
-      a(href="#{e.path}") =e.heading
-    ul
-      -e.edition_plugins.each do |plugin|
-        li
-          a(href="#{plugin.path}")= plugin.heading
-  p 
-    | Don't see the feature or plugin you're looking for? Get 
-    a(href='/plugins/custom') custom plugin development  for 40% off.
+      | Don't see the feature or plugin you're looking for? Get 
+      a(href='/plugins/custom') custom plugin development  for 40% off.
 
