Converting layouts to slim, tweaking logo

--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -12,7 +12,9 @@ header
           span class="icon-bar"
         a class="brand" href="/"
           i class="ico-charts circle"
-          | Sma<span>rt</span>.
+          | Image
+          span Resizer
+          | .
 
 
         .nav-collapse.collapse
@@ -32,4 +34,3 @@ header
                 a href="/licenses" Licenses
 
 
-           
