--- a/content/index.slim
+++ b/content/index.slim
@@ -4,7 +4,7 @@ Libs: uservoice, plusone, bxSlider, -comments
 Banner: banners_content
 Aliases: )
 
-h1
+h1 RESTful image processing
 
 .tiny-news
 	| News: 
