Reworked root blog and license pages

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -23,6 +23,8 @@ Layout: false
             li
               a href="/docs" Docs
             li
+                a href="/blog" Blog
+            li
               a href="/support" Support
             li
               a href="/licenses" Licenses
