--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -29,6 +29,8 @@ header
               li
                 a href="/docs" Docs
               li
+                a href="/blog" Blog
+              li
                 a href="/support" Support
               li
                 a href="/licenses" Licenses
