Fixed deprecation messages

--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -7,7 +7,7 @@ Layout: layout
       div style="width:70px;padding-top:25px;float:right"
         .g-plusone
     - if page.meta.warning
-      .warning-message = page.meta.warning
+      .alert = page.meta.warning
 
     /
       - if page.heading
