Added custom.css, logos, and banner

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -6,11 +6,8 @@ Layout: false
     .row
       .span3
         #footer-menu-logo
-          #logo-chart
-          a class="brand" href="#" 
-            | Image
-            span Resizer
-            | .
+          a class="brand" href="#"
+            img src="/img/imageresizer-logo-gray-160.png" alt="Image Resizer"
       .span8
         #footer-menu-links
           ul#footer-nav
