--- a/content/index.slim
+++ b/content/index.slim
@@ -3,8 +3,27 @@ Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open S
 Libs: uservoice, plusone, bxSlider, -comments
 Banner: banners_content
 Aliases: )
+Layout: layout
 
 h1 RESTful image processing
+
+== content_for :banner do
+	.slider-wrapper
+		#da-slider.da-slider
+			.da-slide
+				h2 Twitter Bootstrap
+				p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				a.da-link href="/" Read More
+				.da-img
+					img src="img/parallax-slider/twitter.png" alt="image01"
+			.da-slide
+				h2 Twitter Bootstrap
+				p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				a.da-link href="/" Read More
+				.da-img
+					img src="img/parallax-slider/twitter.png" alt="image01"
+			
+
 
 .tiny-news
 	| News: 
