--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -11,11 +11,7 @@ header
           span class="icon-bar"
           span class="icon-bar"
         a class="brand" href="/"
-          i class="ico-charts circle"
-          | Image
-          span Resizer
-          | .
-
+          img src="/img/imageresizer-logo-blue.png" alt="Image Resizer"
 
         .nav-collapse.collapse
           ul.nav
