--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -24,10 +24,12 @@ html(lang="en" class="no-js")
     link href="/css/bootstrap-responsive.css" rel="stylesheet"
     link href="/css/style.css" rel="stylesheet"
     link href="/css/parallax-slider.css" rel="stylesheet"
+    link href="/css/custom.css" rel="stylesheet"
     link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700"
     link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif"
     link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo"
     link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Economica:700,400italic"
+
     
     /[if lt IE 9]
       script src="http://html5shim.googlecode.com/svn/trunk/html5.js"
@@ -44,12 +46,13 @@ html(lang="en" class="no-js")
 
     == yield_content(:banner)
 
-    #page-title
-      #page-title-inner
-        .container
-          h2
-            i.ico-stats.icon-white
-            == page.heading
+    == unless content_for?(:banner)
+      #page-title
+        #page-title-inner
+          .container
+            h2
+              i.ico-stats.icon-white
+              == page.heading
 
     #wrapper
       .container
