--- a/content/buy.slim
+++ b/content/buy.slim
@@ -8,8 +8,7 @@ Aliases: /pricing /prices
     <a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" onClick="javascript:return EJEJC_lc(this);">View shopping cart</a>
   span style="position:absolute; top:0px; left:18px;"
     a href="/plugins" View full plugin list
-  h1 Choose Your Edition
-  p.fineprint
+  p.fineprint style="text-align:center"
     | All editions include modifiable source code. 100% satisfaction guarantee, <a href="/purchase/refunds">or your money back</a>. All major credit cards accepted.
   .pricer.p5cols
     .col.grey
