--- a/content/buy.slim
+++ b/content/buy.slim
@@ -1,6 +1,7 @@
 Layout: layout
 Libs: pricer, -comments, ejunkie, ejunkiecart, uservoice
 Heading: Choose your edition
+Icon: shopping-cart
 Aliases: /pricing /prices
 
 .buy-page style="position:relative"
@@ -87,7 +88,7 @@ Aliases: /pricing /prices
           | 499
           span 00
         .payment per domain
-        .label Most popular
+        .pricer-label Most popular
       .details
         ul
           li 
@@ -115,7 +116,7 @@ Aliases: /pricing /prices
         .payment 
           | per 
           strong enterprise
-        .label All-inclusive
+        .pricer-label All-inclusive
       .details
         ul
           li 
@@ -142,7 +143,7 @@ Aliases: /pricing /prices
         .payment 
           | per 
           strong enterprise
-        .label Best Value
+        .pricer-label Best Value
       .details
         ul
           li 
