--- a/content/css/pricer.css
+++ b/content/css/pricer.css
@@ -227,7 +227,7 @@
 
 /* label */
 
-.pricer .col .header .label {
+.pricer .col .header .pricer-label {
   background:-moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.2) 100%);
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0)), color-stop(70%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.1)));
   background-color:#E4E4E4;
@@ -255,9 +255,9 @@
   width:140px;
   z-index:4;
 }
-.pricer .col:hover .header .label,
-.pricer .selected .header .label { width:150px; }
-.pricer .col .header .label span {
+.pricer .col:hover .header .pricer-label,
+.pricer .selected .header .pricer-label { width:150px; }
+.pricer .col .header .pricer-label span {
   -moz-border-radius-bottomleft:5px;  
   -moz-border-radius-bottomright:5px;
   -webkit-border-bottom-left-radius:5px;
