--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -33,9 +33,13 @@ Layout: false
   .container
     .row
       .span3
-        h3 About Us
-        p 
-         |  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+        h3 About ImageResizer
+        markdown:
+          This software has been refined and improved since its creation in 2007, with a focus on security, stability, and performance. [Check out the history of the project](/history). 
+
+          Unlike all the sample code you find on the internet, it avoids [the 29 common image resizing pitfalls](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). 
+
+          Over 10K websites use the ImageResizer; why not read a few [recent testimonials from some of the more well-known people & companies?](/testimonials)
       .span3
         h3 Photo Stream
 
