--- a/content/index.slim
+++ b/content/index.slim
@@ -1,5 +1,5 @@
 Menu: home
-Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source
+Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source - MVC compatible
 Libs: uservoice, plusone, bxSlider, -comments
 Banner: banners_content
 Aliases: )
@@ -11,73 +11,180 @@ h1 RESTful image processing
 	.slider-wrapper
 		#da-slider.da-slider
 			.da-slide
-				h2 Twitter Bootstrap
-				p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				h2 The future is dynamic
+				p Small businesses and large corprorations alike have have been trusting dynamic imaging software to simplify their image management for the last decade. Perhaps it's time you got on board.
+
 				a.da-link href="/" Read More
 				.da-img
-					img src="img/parallax-slider/twitter.png" alt="image01"
+					img src="img/parallax-slider/5twitter.png" alt="image01"
 			.da-slide
-				h2 Twitter Bootstrap
-				p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				h2 Prevent memory leaks
+				p
+					| Engineering the simplest image resizing system is error-prone, and even highly experienced developers invariably miss a memory-leak or two, which is catastrophic for a server. We try to maintain a <a href="http://nathanaeljones.com/163/20-image-resizing-pitfalls/">list of all the common pitfalls</a>, but it grows on a monthly basis.
+
 				a.da-link href="/" Read More
 				.da-img
-					img src="img/parallax-slider/twitter.png" alt="image01"
+					img src="img/parallax-slider/resonsive.png" alt="image01"
+			.da-slide
+				h2 Affordable support
+				p
+					| Can't afford any mistakes? Ensure your content architecture is scalable and secure by having a 
+					strong 30-minute Q&A session with a engineer for just $70
+					|	Get hotfixes within 3 business days  
+					a href="/support/contracts" with a support contract.
+
+
+				a.da-link href="/" Read More
+				.da-img
+					img src="img/parallax-slider/resonsive.png" alt="image01"
+			
+			.da-slide
+				h2 Extreme scalability
+				p
+					| A single server running ImageResizer Performance Edition can efficiently cache and serve up to a million images. Many of our clients use it will up to 10 million, but at that point we suggest a Varnish cache.
+
+
+
+				a.da-link href="/" Read More
+				.da-img
+					img src="img/parallax-slider/resonsive.png" alt="image01"
 			
 
+hr
 
-.tiny-news
-	| News: 
-	ul
-		- for p in index.posts[0..2]
+.row
+	.span8
+		.hero-unit
+			h3
+				p Easy install with NuGet
+					code
+						| PM> Install-Package ImageResizer.MvcWebConfig
+					| or
+					code
+						| PM> Install-Package ImageResizer.WebConfig
+				
+				a.btn.btn-primary.btn-large Or download
+				|  and follow the 
+				a href="/docs/install/aspnet"
+					| manual installation steps.
+	.span4
+		.tiny-news
+		| News: 
+		ul
+			- for p in index.posts[0..2]
+				li
+					a href=p.path 
+						= p.meta.short_heading || p.heading
 			li
-				a href=p.path 
-					= p.meta.short_heading || p.heading
-		li
-			a href="/blog" 
-				| more...
+				a href="/blog" 
+					| more...
 
-h1 Quick start
+hr
 
+
+
+hr
+
+.row
+	.icons-box-vert-container
+		.span4
+			.icons-box-vert
+				i.ico-ok.ico-white.circle-color-full
+				.icons-box-vert-info
+					h3 Work less, do more
+					p Resize, crop, rotate, watermark, and modify images without ever leaving your browser or editor, with a simple API.
+					p Stop managing multiple versions. Stop the endless photoshop-upload-test cycle, and make images the easiest part of your job.
+
+				.clear
+		.span4
+			.icons-box-vert
+				i.ico-cup.ico-white.circle-color-full
+				.icons-box-vert-info
+					h3 Open source
+					markdown:
+						Core functionality is free and open source under the [Freedom license](/licenses/freedom). 
+						
+						Everything we offer includes source code and permits modification.
+
+						We reward pull requests.
+					
+				.clear
+		.span4
+			.icons-box-vert
+				i.ico-ipad.ico-white.circle-color-full
+				.icons-box-vert-info
+					h3 Pain-free Mobile
+					p Let ImageResizer handle the generation of all the image variations you need to support mobile devices and responsive web design.
+					p Visit /resizer.debug.ashx anytime to run self-diagnostics
+				.clear
+	.clear
+
+hr
+
+.row
+	.span9
+		.title
+			h3 ImageResizer in the wild
+		.row
+			.span3
+				.picture
+					a href="http://placehold.it/270x180" rel="image" title="example goes here"
+						img src="http://placehold.it/270x180"
+						.image-overlay-zoom
+				.item-description
+					h4: a(href="#"): Example site
+					p Description of demo site
+			.span3
+				.picture
+					a href="http://placehold.it/270x180" rel="image" title="example goes here"
+						img src="http://placehold.it/270x180"
+						.image-overlay-zoom
+				.item-description
+					h4: a(href="#"): Example site
+					p Description of demo site
+			.span3
+				.picture
+					a href="http://placehold.it/270x180" rel="image" title="example goes here"
+						img src="http://placehold.it/270x180"
+						.image-overlay-zoom
+				.item-description
+					h4: a(href="#"): Example site
+					p Description of demo site
+	.span3
+		.testimonial-container
+			.title
+				h3 Testimonials
+			.testimonials-carousel data-autorotate="3000"
+				ul.carousel
+					li.testimonial
+						.testimonials
+							| ... Just to be clear to the listener, I reached out to Nathanael, and I'm talking about his product because I think it's amazing and awesome, and I've talked about it before on the blog. He's not an advertiser, this is me, Scott, saying that this is a rocking awesome library. He's got a really, really great license for both open source and commercial. - 
+							a href="http://www.hanselminutes.com/313/deep-inside-image-resizing-and-scaling-with-aspnet-and-iis-with-imageresizingnet-author-na" Hanselminutes #313
+						.testimonials-bg
+						.testimonials-author
+							a href="http://hanselman.com"
+								| Scott Hanselman  
+							span
+								| , Web Platform Team, Microsoft
+
+					li.testimonial
+						.testimonials
+							| We have 8 years working knowledge of dynamic image resizing software, and the majority of that time was spent working with industry-leading products such as Adobe Scene7 and eRez. ImageResizer is what we’ve found to best serve our customers’ needs – installation was a breeze, support is impeccable, and the price tag much more reasonable. I highly recommend ImageResizer for any dynamic imaging needs.
+						.testimonials-bg
+						.testimonials-author
+							| Craig Boal, 
+							span Web Development Manager
+					li.testimonial
+						.testimonials
+							p We've used Nathanael's Image Resizer on a variety of projects, both small and large. It's fast, reliable, robust, easy to use, and a HUGE time saver. I can easily say that we've gotten more bang-for-the-buck from it than anything else we've purchased in the past 5 years. 
+							p Thanks Nathanael for creating such a wonderful product.
+						.testimonials-bg
+						.testimonials-author
+							| Dorian Collier, 
+							span Deesea
+			
+	
 markdown:
-	1. [Download and unzip the package](/download) or [install the NuGet package](/docs/nuget). If you're not using ASP.NET, [read this guide](/docs/howto/use-without-asp-net).
-	2. In Visual Studio, right click your project and choose "Add reference". Browse to the extracted folder, and choose `dlls\release\ImageResizer.dll`. Or just copy it into the 'bin' folder. Whichever you prefer. (Compatible with .NET 2-4).
-	3. Modify or create the /Web.Config file for your site:
-		
-			<?xml version="1.0" encoding="utf-8" ?>
-			<configuration>
-				<configSections>
-					<section name="resizer" type="ImageResizer.ResizerSection,ImageResizer"  requirePermission="false"  />
-				</configSections>
-
-				<resizer>
-					<!-- Unless you (a) use Integrated mode, or (b) map all reqeusts to ASP.NET, 
-							 you'll need to add .ashx to your image URLs: image.jpg.ashx?width=200&height=20 -->
-					<pipeline fakeExtensions=".ashx" />
-
-					<plugins>
-						<!-- <add name="DiskCache" /> -->
-						<!-- <add name="PrettyGifs" /> -->
-					</plugins>  
-				</resizer>
-
-				<system.web>
-					<httpModules>
-						<!-- This is for IIS5, IIS6, and IIS7 Classic, and Cassini/VS Web Server-->
-						<add name="ImageResizingModule" type="ImageResizer.InterceptModule"/>
-					</httpModules>
-				</system.web>
-
-				<system.webServer>
-					<validation validateIntegratedModeConfiguration="false"/>
-					<modules>
-						<!-- This is for IIS7+ Integrated mode -->
-						<add name="ImageResizingModule" type="ImageResizer.InterceptModule"/>
-					</modules>
-				</system.webServer>
-			</configuration>
-		
-	4. Start your web site, then visit [/resizer.debug.ashx](/plugins/diagnostics) to verify you've done everything correctly. If you ever encounter issues, simply revisit that page to access the self-diagnostics. If you need help, [just ask](/support)! ASP.NET MVC is fully supported, [just install the MvcRoutingShim plugin](/docs/mvc).
-
 	5. Relax and have fun! This software has been refined and improved since its creation in 2007, with a focus on security, stability, and performance. [Check out the history of the project](/history). Unlike all the sample code you find on the internet, it avoids [the 29 common image resizing pitfalls](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Over 10K websites use the ImageResizer; why not read a few [recent testimonials from some of the more well-known people & companies?](/testimonials).
 
 	6. Spread the word! Tell your friends and co-workers about this library. And click the +1 button to tell [Google Plus](http://plus.google.com/) that this is an awesome site. Have ideas or feedback? [share them on our UserVoice site, so others can vote up your proposals](http://resizer.uservoice.com).
