Added google plus social icon

--- a/content/css/social-icons.css
+++ b/content/css/social-icons.css
@@ -624,6 +624,13 @@
 	background: #7292a2 url(../img/icons/social_big/github_white.png) no-repeat;
 }
 
+.social-googleplus { 
+	background: #f6f6f6 url(../img/icons/social_big/googleplus_grey.png) no-repeat;
+}
+
+.social-googleplus-hover { 
+	background: #d54135 url(../img/icons/social_big/googleplus_white.png) no-repeat;
+}
 .social-html5 { 
 	background: #f6f6f6 url(../img/icons/social_big/html5_grey.png) no-repeat;
 }
