--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -71,6 +71,7 @@ html(lang="en" class="no-js")
     <script src="/js/jquery.cslider.js"></script>
     <script src="/js/slider.js"></script>
     <script src="/js/fancybox.js"></script>
+    <script defer="defer" src="/js/script.js"></script>
     <script defer="defer" src="/js/custom.js"></script>
 
     script src="/js/highlight/highlight.pack.js"
