Reworking home page

--- a/content/index.slim
+++ b/content/index.slim
@@ -120,7 +120,7 @@ hr
 				.icons-box-vert-info
 					h3 Pain-free Mobile
 					p Let ImageResizer handle the generation of all the image variations you need to support mobile devices and responsive web design.
-					p Visit /resizer.debug.ashx anytime to run self-diagnostics
+					p Agility is needed everywhere. Why is asset management still holding you back?
 				.clear
 	.clear
 
@@ -129,7 +129,7 @@ hr
 .row
 	.span9
 		.title
-			h3 ImageResizer in the wild
+			h3 Community Plugins
 		.row
 			.span3
 				.picture
@@ -137,7 +137,7 @@ hr
 						img src="http://placehold.it/270x180"
 						.image-overlay-zoom
 				.item-description
-					h4: a(href="#"): Example site
+					h4: a(href="#"): ResponsivePresets
 					p Description of demo site
 			.span3
 				.picture
@@ -145,7 +145,7 @@ hr
 						img src="http://placehold.it/270x180"
 						.image-overlay-zoom
 				.item-description
-					h4: a(href="#"): Example site
+					h4: a(href="#"): FluentExtensions
 					p Description of demo site
 			.span3
 				.picture
@@ -153,7 +153,7 @@ hr
 						img src="http://placehold.it/270x180"
 						.image-overlay-zoom
 				.item-description
-					h4: a(href="#"): Example site
+					h4: a(href="#"): StudioJS
 					p Description of demo site
 	.span3
 		.testimonial-container
@@ -163,7 +163,7 @@ hr
 				ul.carousel
 					li.testimonial
 						.testimonials
-							| ... Just to be clear to the listener, I reached out to Nathanael, and I'm talking about his product because I think it's amazing and awesome, and I've talked about it before on the blog. He's not an advertiser, this is me, Scott, saying that this is a rocking awesome library. He's got a really, really great license for both open source and commercial. - 
+							| ... Just to be clear to the listener, I reached out to Nathanael, and I'm talking about his product because I think it's amazing and awesome, and I've talked about it before on the blog. He's not an advertiser, this is me, Scott, saying that this is a rocking awesome library. - 
 							a href="http://www.hanselminutes.com/313/deep-inside-image-resizing-and-scaling-with-aspnet-and-iis-with-imageresizingnet-author-na" Hanselminutes #313
 						.testimonials-bg
 						.testimonials-author
@@ -187,17 +187,37 @@ hr
 						.testimonials-author
 							| Dorian Collier, 
 							span Deesea
-			
-	
-markdown:
+hr
 
-	7. Ready to go live? Get the [Performance Edition](/plugins/editions/performance), which includes [disk caching](/plugins/diskcache) and several other invaluable plugins. This project requires my full-time attention (and part-time help from others), so please support it by purchasing [a paid edition](/buy) or [an all-inclusive support contract](/support/contracts). 
+.row
+	.icons-box-vert-container
+		.span4
+			.icons-box-vert
+				i.ico-white.circle-color-full.ico-stats
+				.icons-box-vert-info
+					h3 High performance
+					markdown:
+						Upgrade to the [Performance Edition](/plugins/editions/performance) and scale to millions of images and users. 
 
-	8. Add [third-pary plugins](/docs/wrappers) and contribute your own:
-		* Use [Ben Foster's Fluent API](https://github.com/benfoster/ImageResizer.FluentExtensions) instead of building query strings with the `Instructions` class
-		* Want a UI for ImageResizer? [Try StudioJS](https://github.com/nathanaeljones/studiojs)
-		* Responsive web design requires responsive images. [Check out the ResponsivePresets system](https://github.com/mindrevolution/ImageResizer-ResponsivePresets) from [marc303](https://github.com/marc303).
+				.clear
+		.span4
+			.icons-box-vert
+				i.ico-white.circle-color-full.ico-hospital
+				.icons-box-vert-info
+					h3 Self-diagnostic
+					markdown:
+						ImageResizer sports a protected self-diagnostics page at `/resizer.debug`. If you're having issues, this page will tell you how to fix them.
+					
+				.clear
+		.span4
+			.icons-box-vert
+				i.ico-white.circle-color-full.ico-phone
+				.icons-box-vert-info
+					h3 Affordable consulting and support
+					markdown:
+						[We can help you optimize your content architecture](/consult) or assist with installation for a very affordable price. 
+						We also offer hotfix delivery guarantees with our all-inclusive [support contracts](/support/contracts)
 
-	Can't afford any mistakes? Ensure your content architecture is scalable and secure by having a **30-minute Q&A session with the author for just $70**.
-	Add aided installation of 1 server or workstation for +$60, or 2 servers or workstations for +$120. [Find out more](/support/consult). Or, get [a support contract](/support/contracts) that includes all of the above *and* licenses for everything. 
+				.clear
+	.clear
 
